--- a/ch03/02_bonus_efficient-multihead-attention/mha-implementations.ipynb
+++ b/ch03/02_bonus_efficient-multihead-attention/mha-implementations.ipynb
@@ -113,12 +113,12 @@
     "\n",
     "mha_ch03_wrapper = Ch03_MHA_Wrapper(\n",
     "    d_in=embed_dim,\n",
-    "    d_out=embed_dim//12,\n",
+    "    d_out=embed_dim//12,  \n",
     "    context_length=context_len,\n",
     "    dropout=0.0,\n",
     "    num_heads=12,\n",
     "    qkv_bias=False\n",
-    ").to(device)\n",
+    ").to(device)   # 同时用多个Q计算后进行拼接\n",
     "\n",
     "out = mha_ch03_wrapper(embeddings)\n",
     "print(out.shape)"
@@ -167,7 +167,7 @@
     "    dropout=0.0,\n",
     "    num_heads=12,\n",
     "    qkv_bias=False\n",
-    ").to(device)\n",
+    ").to(device)   # 用单个Q计算后拆分\n",
     "\n",
     "out = mha_ch03(embeddings)\n",
     "print(out.shape)"
@@ -958,7 +958,7 @@
     }
    ],
    "source": [
-    "## 4) Multihead attention with PyTorch's scaled dot product attention\n",
+    "## 4) Multihead attention with PyTorch's scaled dot product attention  （最优效果）\n",
     "%timeit mha_pytorch_scaled(embeddings)"
    ]
   },
