--- a/ch02/02_bonus_bytepair-encoder/compare-bpe-tiktoken.ipynb
+++ b/ch02/02_bonus_bytepair-encoder/compare-bpe-tiktoken.ipynb
@@ -432,7 +432,7 @@
     }
    ],
    "source": [
-    "%timeit tik_tokenizer.encode(raw_text)"
+    "%timeit tik_tokenizer.encode(raw_text)  # tiktoken的速度最快"
    ]
   },
   {
@@ -495,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
