--- a/ch02/03_bonus_embedding-vs-matmul/embeddings-and-linear-layers.ipynb
+++ b/ch02/03_bonus_embedding-vs-matmul/embeddings-and-linear-layers.ipynb
@@ -33,7 +33,7 @@
    "id": "0315c598-701f-46ff-8806-15813cad0e51",
    "metadata": {},
    "source": [
-    "- Embedding layers in PyTorch accomplish the same as linear layers that perform matrix multiplications; the reason we use embedding layers is computational efficiency\n",
+    "- Embedding layers in PyTorch accomplish the same as linear layers that perform matrix multiplications; the reason we use embedding layers is computational efficiency  （嵌入层与线性层的都是执行矩阵相乘，使用嵌入层的理由是计算效率高）\n",
     "- We will take a look at this relationship step by step using code examples in PyTorch"
    ]
   },
@@ -497,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
