--- a/ch02/04_bonus_dataloader-intuition/dataloader-intuition.ipynb
+++ b/ch02/04_bonus_dataloader-intuition/dataloader-intuition.ipynb
@@ -269,7 +269,7 @@
     "for inputs, targets in dataloader:\n",
     "    pass\n",
     "\n",
-    "print(\"Inputs:\\n\", inputs)\n",
+    "print(\"Inputs:\\n\", inputs)  \n",
     "print(\"\\nTargets:\\n\", targets)"
    ]
   },
@@ -278,7 +278,7 @@
    "id": "cdd66560-25d5-4800-acc1-432735dfc7d6",
    "metadata": {},
    "source": [
-    "Finally, a data loader with shuffling:"
+    "Finally, a data loader with shuffling:  （shuffling会将数据打乱）"
    ]
   },
   {
@@ -329,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
