--- a/ch03/01_main-chapter-code/ch03.ipynb
+++ b/ch03/01_main-chapter-code/ch03.ipynb
@@ -271,7 +271,7 @@
    "id": "299baef3-b1a8-49ba-bad4-f62c8a416d83",
    "metadata": {},
    "source": [
-    "- (In this book, we follow the common machine learning and deep learning convention where training examples are represented as rows and feature values as columns; in the case of the tensor shown above, each row represents a word, and each column represents an embedding dimension)\n",
+    "- (In this book, we follow the common machine learning and deep learning convention where training examples are represented as rows and feature values as columns; in the case of the tensor shown above, each row represents a word, and each column represents an embedding dimension)  (每一行表示一个单词，每一列表示嵌入的维度)\n",
     "\n",
     "- The primary objective of this section is to demonstrate how the context vector $z^{(2)}$\n",
     "  is calculated using the second input sequence, $x^{(2)}$, as a query\n",
@@ -359,7 +359,7 @@
    "id": "7d444d76-e19e-4e9a-a268-f315d966609b",
    "metadata": {},
    "source": [
-    "- **Step 2:** normalize the unnormalized attention scores (\"omegas\", $\\omega$) so that they sum up to 1\n",
+    "- **Step 2:** normalize the unnormalized attention scores (\"omegas\", $\\omega$) so that they sum up to 1  （归一化）\n",
     "- Here is a simple way to normalize the unnormalized attention scores to sum up to 1 (a convention, useful for interpretation, and important for training stability):"
    ]
   },
@@ -398,7 +398,7 @@
    "id": "75dc0a57-f53e-41bf-8793-daa77a819431",
    "metadata": {},
    "source": [
-    "- However, in practice, using the softmax function for normalization, which is better at handling extreme values and has more desirable gradient properties during training, is common and recommended.\n",
+    "- However, in practice, using the softmax function for normalization, which is better at handling extreme values and has more desirable gradient properties during training, is common and recommended.  （实际中一般用softmax函数做归一化）\n",
     "- Here's a naive implementation of a softmax function for scaling, which also normalizes the vector elements such that they sum up to 1:"
    ]
   },
@@ -777,8 +777,8 @@
     "  - We want to compute context vectors as weighted sums over the input vectors specific to a certain input element\n",
     "  - For the above, we need attention weights\n",
     "- As you will see, there are only slight differences compared to the basic attention mechanism introduced earlier:\n",
-    "  - The most notable difference is the introduction of weight matrices that are updated during model training\n",
-    "  - These trainable weight matrices are crucial so that the model (specifically, the attention module inside the model) can learn to produce \"good\" context vectors"
+    "  - The most notable difference is the introduction of weight matrices that are updated during model training  （权重矩阵的训练是最大的不同）\n",
+    "  - These trainable weight matrices are crucial so that the model (specifically, the attention module inside the model) can learn to produce \"good\" context vectors  （可训练的权重矩阵是最关键的，可以让模型变得更好）"
    ]
   },
   {
@@ -807,8 +807,8 @@
    "id": "9f334313-5fd0-477b-8728-04080a427049",
    "metadata": {},
    "source": [
-    "- The embedding dimensions of the input $x$ and the query vector $q$ can be the same or different, depending on the model's design and specific implementation\n",
-    "- In GPT models, the input and output dimensions are usually the same, but for illustration purposes, to better follow the computation, we choose different input and output dimensions here:"
+    "- The embedding dimensions of the input $x$ and the query vector $q$ can be the same or different, depending on the model's design and specific implementation  （输入的嵌入维度和query向量的维度可以相同，也可以不同）\n",
+    "- In GPT models, the input and output dimensions are usually the same, but for illustration purposes, to better follow the computation, we choose different input and output dimensions here:  （在GPT模型中，一般会让输入和输出的维度相同）"
    ]
   },
   {
@@ -1335,9 +1335,9 @@
    "id": "3eb35787-cf12-4024-b66d-e7215e175500",
    "metadata": {},
    "source": [
-    "- However, if the mask were applied after softmax, like above, it would disrupt the probability distribution created by softmax\n",
+    "- However, if the mask were applied after softmax, like above, it would disrupt the probability distribution created by softmax （如果mask是在softmax之后添加，会破坏softmax产生的概率分布）\n",
     "- Softmax ensures that all output values sum to 1\n",
-    "- Masking after softmax would require re-normalizing the outputs to sum to 1 again, which complicates the process and might lead to unintended effects"
+    "- Masking after softmax would require re-normalizing the outputs to sum to 1 again, which complicates the process and might lead to unintended effects （因此在softmax之后mask，需要重新进行归一化处理，这会导致流程变复杂，并且带来预期外的影响）"
    ]
   },
   {
@@ -1380,7 +1380,7 @@
    "metadata": {},
    "source": [
     "- While we are technically done with coding the causal attention mechanism now, let's briefly look at a more efficient approach to achieve the same as above\n",
-    "- So, instead of zeroing out attention weights above the diagonal and renormalizing the results, we can mask the unnormalized attention scores above the diagonal with negative infinity before they enter the softmax function:"
+    "- So, instead of zeroing out attention weights above the diagonal and renormalizing the results, we can mask the unnormalized attention scores above the diagonal with negative infinity before they enter the softmax function:  （相比于直接置为0，更好的方法是在softmax之前将其置为负无穷大）"
    ]
   },
   {
@@ -1467,7 +1467,7 @@
     "- Dropout can be applied in several places:\n",
     "  - for example, after computing the attention weights;\n",
     "  - or after multiplying the attention weights with the value vectors\n",
-    "- Here, we will apply the dropout mask after computing the attention weights because it's more common\n",
+    "- Here, we will apply the dropout mask after computing the attention weights because it's more common  （dropout可以降低过拟合，这里是在计算完注意力权重后使用）\n",
     "\n",
     "- Furthermore, in this specific example, we use a dropout rate of 50%, which means randomly masking out half of the attention weights. (When we train the GPT model later, we will use a lower dropout rate, such as 0.1 or 0.2"
    ]
@@ -1485,7 +1485,7 @@
    "id": "5a575458-a6da-4e54-8688-83e155f2de06",
    "metadata": {},
    "source": [
-    "- If we apply a dropout rate of 0.5 (50%), the non-dropped values will be scaled accordingly by a factor of 1/0.5 = 2."
+    "- If we apply a dropout rate of 0.5 (50%), the non-dropped values will be scaled accordingly by a factor of 1/0.5 = 2.  （如果使用50%的dropout，则没被dropout的数值要乘以系数1/0.5=2）"
    ]
   },
   {
@@ -1498,12 +1498,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[2., 2., 0., 2., 2., 0.],\n",
-      "        [0., 0., 0., 2., 0., 2.],\n",
-      "        [2., 2., 2., 2., 0., 2.],\n",
-      "        [0., 2., 2., 0., 0., 2.],\n",
-      "        [0., 2., 0., 2., 0., 2.],\n",
-      "        [0., 2., 2., 2., 2., 0.]])\n"
+      "tensor([[2., 2., 2., 2., 2., 2.],\n",
+      "        [0., 2., 0., 0., 0., 0.],\n",
+      "        [0., 0., 2., 0., 2., 0.],\n",
+      "        [2., 2., 0., 0., 0., 2.],\n",
+      "        [2., 0., 0., 0., 0., 2.],\n",
+      "        [0., 2., 0., 0., 0., 0.]])\n"
      ]
     }
    ],
@@ -1526,11 +1526,11 @@
      "output_type": "stream",
      "text": [
       "tensor([[2.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.7599, 0.6194, 0.6206, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.4921, 0.4925, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.3966, 0.0000, 0.3775, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.3327, 0.3331, 0.3084, 0.3331, 0.0000]],\n",
+      "        [0.0000, 0.8966, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.6206, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.5517, 0.4921, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.4350, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.3327, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
       "       grad_fn=<MulBackward0>)\n"
      ]
     }
@@ -1563,7 +1563,7 @@
    "source": [
     "- Now, we are ready to implement a working implementation of self-attention, including the causal and dropout masks\n",
     "- One more thing is to implement the code to handle batches consisting of more than one input so that our `CausalAttention` class supports the batch outputs produced by the data loader we implemented in chapter 2\n",
-    "- For simplicity, to simulate such batch input, we duplicate the input text example:"
+    "- For simplicity, to simulate such batch input, we duplicate the input text example:  (多一个维度，batch大小)"
    ]
   },
   {
@@ -1658,7 +1658,7 @@
    "id": "c4333d12-17e4-4bb5-9d83-54b3a32618cd",
    "metadata": {},
    "source": [
-    "- Note that dropout is only applied during training, not during inference"
+    "- Note that dropout is only applied during training, not during inference  （注意，dropout只在训练时生效，不在推理时使用）"
    ]
   },
   {
@@ -1700,7 +1700,7 @@
     "\n",
     "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch03_compressed/25.webp\" width=\"400px\">\n",
     "\n",
-    "- The main idea behind multi-head attention is to run the attention mechanism multiple times (in parallel) with different, learned linear projections. This allows the model to jointly attend to information from different representation subspaces at different positions."
+    "- The main idea behind multi-head attention is to run the attention mechanism multiple times (in parallel) with different, learned linear projections. This allows the model to jointly attend to information from different representation subspaces at different positions. （多头注意力的目的是并行地计算不同科学系的线性映射，用于表征信息的不同特征子空间）"
    ]
   },
   {
@@ -1782,7 +1782,7 @@
     "- While the above is an intuitive and fully functional implementation of multi-head attention (wrapping the single-head attention `CausalAttention` implementation from earlier), we can write a stand-alone class called `MultiHeadAttention` to achieve the same\n",
     "\n",
     "- We don't concatenate single attention heads for this stand-alone `MultiHeadAttention` class\n",
-    "- Instead, we create single W_query, W_key, and W_value weight matrices and then split those into individual matrices for each attention head:"
+    "- Instead, we create single W_query, W_key, and W_value weight matrices and then split those into individual matrices for each attention head: （也可以不是对注意力权重进行拼接，而是通过WQ,QK,QV的分割来实现多头）"
    ]
   },
   {
@@ -1892,7 +1892,7 @@
    "source": [
     "- Note that the above is essentially a rewritten version of `MultiHeadAttentionWrapper` that is more efficient\n",
     "- The resulting output looks a bit different since the random weight initializations differ, but both are fully functional implementations that can be used in the GPT class we will implement in the upcoming chapters\n",
-    "- Note that in addition, we added a linear projection layer (`self.out_proj `) to the `MultiHeadAttention` class above. This is simply a linear transformation that doesn't change the dimensions. It's a standard convention to use such a projection layer in LLM implementation, but it's not strictly necessary (recent research has shown that it can be removed without affecting the modeling performance; see the further reading section at the end of this chapter)\n"
+    "- Note that in addition, we added a linear projection layer (`self.out_proj `) to the `MultiHeadAttention` class above. This is simply a linear transformation that doesn't change the dimensions. It's a standard convention to use such a projection layer in LLM implementation, but it's not strictly necessary (recent research has shown that it can be removed without affecting the modeling performance; see the further reading section at the end of this chapter)  （在输出加了一个线性映射层，但是这不是严格必须的，最近的研究表明去除线性映射层不会影响模型性能）\n"
    ]
   },
   {
@@ -1957,7 +1957,8 @@
    "id": "0587b946-c8f2-4888-adbf-5a5032fbfd7b",
    "metadata": {},
    "source": [
-    "- In this case, the matrix multiplication implementation in PyTorch will handle the 4-dimensional input tensor so that the matrix multiplication is carried out between the 2 last dimensions (num_tokens, head_dim) and then repeated for the individual heads \n",
+    "- In this case, the matrix multiplication implementation in PyTorch will handle the 4-dimensional input tensor so that the matrix multiplication is carried out between the 2 last dimensions (num_tokens, head_dim) and then repeated for the individual heads （矩阵乘法发生在最后两个维度，即 $3*4 \\times\n",
+    "4*3 = 3*3$，然后在每个头上进行重复）\n",
     "\n",
     "- For instance, the following becomes a more compact way to compute the matrix multiplication for each head separately:"
    ]
@@ -2010,6 +2011,14 @@
     "- See the [./multihead-attention.ipynb](./multihead-attention.ipynb) code notebook, which is a concise version of the data loader (chapter 2) plus the multi-head attention class that we implemented in this chapter and will need for training the GPT model in upcoming chapters\n",
     "- You can find the exercise solutions in [./exercise-solutions.ipynb](./exercise-solutions.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59a8f27c-5017-4822-845b-dd41b33a026d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2028,7 +2037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
