--- a/ch07/04_preference-tuning-with-dpo/dpo-from-scratch.ipynb
+++ b/ch07/04_preference-tuning-with-dpo/dpo-from-scratch.ipynb
@@ -71,7 +71,7 @@
      "output_type": "stream",
      "text": [
       "tiktoken version: 0.7.0\n",
-      "torch version: 2.3.1+cu121\n"
+      "torch version: 2.4.0\n"
      ]
     }
    ],
@@ -1262,7 +1262,7 @@
     "id": "e525287f-137c-4d71-94ae-cfd6db7b057c"
    },
    "source": [
-    "- We will make use of this mask to ignore prompt and padding tokens when computing the DPO loss later"
+    "- We will make use of this mask to ignore prompt and padding tokens when computing the DPO loss later   计算DPO loss时，通过mask来忽略prompt和padding的tokens"
    ]
   },
   {
@@ -1757,7 +1757,7 @@
    },
    "source": [
     "- Now, we are almost ready to get to the DPO part\n",
-    "- As mentioned at the beginning of this notebook, DPO works with two LLMs: a policy model (the LLM that we want to optimize) and a reference model (the original model that we keep unchanged)\n",
+    "- As mentioned at the beginning of this notebook, DPO works with two LLMs: a policy model (the LLM that we want to optimize) and a reference model (the original model that we keep unchanged)   DPO会使用两个LLM，一个是我们要优化的模型，一个是不做修改的参考模型\n",
     "- Below, we rename the `model` as `policy_model` and instantiate a second instance of the model we refer to as the `reference_model`"
    ]
   },
@@ -3090,7 +3090,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
